MessageBuilder back box Tests

--- a/Alicargo.Jobs.BlackBox.Tests/Alicargo.Jobs.BlackBox.Tests.csproj
+++ b/Alicargo.Jobs.BlackBox.Tests/Alicargo.Jobs.BlackBox.Tests.csproj
@@ -47,6 +47,7 @@
       <HintPath>..\packages\AutoFixture.3.16.1\lib\net40\Ploeh.AutoFixture.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
@@ -72,6 +73,14 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Alicargo.Contracts\Alicargo.Contracts.csproj">
+      <Project>{E2F1A146-9076-4833-995E-084AC1B3EAC7}</Project>
+      <Name>Alicargo.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Alicargo.Core\Alicargo.Core.csproj">
+      <Project>{577B60F9-32F7-4117-97DA-40743BFF4CA0}</Project>
+      <Name>Alicargo.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Alicargo.Jobs\Alicargo.Jobs.csproj">
       <Project>{c2133743-7762-4bd9-a824-eb039e41af58}</Project>
       <Name>Alicargo.Jobs</Name>
