--- a/Alicargo.Core/Alicargo.Core.csproj
+++ b/Alicargo.Core/Alicargo.Core.csproj
@@ -77,8 +77,8 @@
     <Compile Include="Event\PartitionConverter.cs" />
     <Compile Include="Helpers\SumHolder.cs" />
     <Compile Include="Localization\DisplayNameLocalizedAttribute.cs" />
-    <Compile Include="Localization\CultureContext.cs" />
-    <Compile Include="Localization\ICultureContext.cs" />
+    <Compile Include="Localization\CultureProvider.cs" />
+    <Compile Include="Localization\ICultureProvider.cs" />
     <Compile Include="Event\EventFacade.cs" />
     <Compile Include="Resources\Entities.ru.Designer.cs">
       <DependentUpon>Entities.ru.resx</DependentUpon>
