--- a/Alicargo.Jobs.Tests/Alicargo.Jobs.Tests.csproj
+++ b/Alicargo.Jobs.Tests/Alicargo.Jobs.Tests.csproj
@@ -78,6 +78,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ApplicationEvents\Helpers\ApplicationEventTemplatesTests.cs" />
+    <Compile Include="Helpers\ClientExcelHelperTests.cs" />
     <Compile Include="Helpers\TemplateRepositoryWrapperTests.cs" />
     <Compile Include="Helpers\TextBulderHelperGetMatchTests.cs" />
     <Compile Include="Helpers\TextBulderHelperGetTextTests.cs" />
