--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -9,5 +9,6 @@
   <repository path="..\Alicargo.Jobs.Tests\packages.config" />
   <repository path="..\Alicargo.TestHelpers\packages.config" />
   <repository path="..\Alicargo.Tests\packages.config" />
+  <repository path="..\Alicargo.Utilities\packages.config" />
   <repository path="..\Alicargo\packages.config" />
 </repositories>
