--- a/Alicargo.Core/Alicargo.Core.csproj
+++ b/Alicargo.Core/Alicargo.Core.csproj
@@ -75,11 +75,7 @@
     <Compile Include="Event\IPartitionConverter.cs" />
     <Compile Include="Event\IEventFacade.cs" />
     <Compile Include="Event\PartitionConverter.cs" />
-    <Compile Include="Helpers\DateTimeProvider.cs" />
     <Compile Include="Helpers\SumHolder.cs" />
-    <Compile Include="Localization\DisplayNameLocalizedAttribute.cs" />
-    <Compile Include="Localization\CultureProvider.cs" />
-    <Compile Include="Localization\ICultureProvider.cs" />
     <Compile Include="Event\EventFacade.cs" />
     <Compile Include="Resources\Entities.ru.Designer.cs">
       <DependentUpon>Entities.ru.resx</DependentUpon>
@@ -134,21 +130,21 @@
     <Compile Include="Services\Abstract\IClientBalance.cs" />
     <Compile Include="Services\Abstract\IStateConfig.cs" />
     <Compile Include="Services\Email\DbMailSender.cs" />
-    <Compile Include="Services\ExtensionsHelper.cs" />
-    <Compile Include="Localization\LocalizeEnumExtension.cs" />
     <Compile Include="Services\Abstract\ILog.cs" />
     <Compile Include="Services\Abstract\IMailSender.cs" />
     <Compile Include="Helpers\LocalizationHelper.cs" />
     <Compile Include="Services\Email\MailSender.cs" />
-    <Compile Include="Services\PasswordConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Serializer.cs" />
     <Compile Include="Services\Email\SilentMailSender.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Alicargo.Contracts\Alicargo.Contracts.csproj">
       <Project>{e2f1a146-9076-4833-995e-084ac1b3eac7}</Project>
       <Name>Alicargo.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Alicargo.Utilities\Alicargo.Utilities.csproj">
+      <Project>{28A88A2C-7BA4-4F4E-9131-AD69B070CD31}</Project>
+      <Name>Alicargo.Utilities</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
