--- a/Alicargo.TestHelpers/Alicargo.TestHelpers.csproj
+++ b/Alicargo.TestHelpers/Alicargo.TestHelpers.csproj
@@ -101,6 +101,10 @@
       <Project>{C2133743-7762-4BD9-A824-EB039E41AF58}</Project>
       <Name>Alicargo.Jobs</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Alicargo.Utilities\Alicargo.Utilities.csproj">
+      <Project>{28A88A2C-7BA4-4F4E-9131-AD69B070CD31}</Project>
+      <Name>Alicargo.Utilities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Alicargo\Alicargo.csproj">
       <Project>{8666b402-84b6-49d4-abd7-b2966955c9cb}</Project>
       <Name>Alicargo</Name>
