--- a/Alicargo.Contracts/Alicargo.Contracts.csproj
+++ b/Alicargo.Contracts/Alicargo.Contracts.csproj
@@ -78,11 +78,17 @@
     <Compile Include="Contracts\State\StateData.cs" />
     <Compile Include="Contracts\TransitData.cs" />
     <Compile Include="Contracts\User\UserData.cs" />
+    <Compile Include="Enums\ClassType.cs" />
+    <Compile Include="Enums\CurrencyName.cs" />
+    <Compile Include="Enums\CurrencyType.cs" />
+    <Compile Include="Enums\DeliveryType.cs" />
     <Compile Include="Enums\EventState.cs" />
     <Compile Include="Enums\EventType.cs" />
     <Compile Include="Enums\ApplicationFileType.cs" />
     <Compile Include="Enums\CalculationState.cs" />
     <Compile Include="Enums\EmailMessageState.cs" />
+    <Compile Include="Enums\MethodOfDelivery.cs" />
+    <Compile Include="Enums\MethodOfTransit.cs" />
     <Compile Include="Enums\RoleType.cs" />
     <Compile Include="Enums\TwoLetterISOLanguageName.cs" />
     <Compile Include="Exceptions\AccessForbidenException.cs" />
@@ -98,6 +104,51 @@
     <Compile Include="Helpers\OrderHelper.cs" />
     <Compile Include="Helpers\OrderType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\ApplicationFileType.Designer.cs">
+      <DependentUpon>ApplicationFileType.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Resources\ApplicationFileType.it.Designer.cs">
+      <DependentUpon>ApplicationFileType.it.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Resources\ApplicationFileType.ru.Designer.cs">
+      <DependentUpon>ApplicationFileType.ru.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Resources\Entities.Designer.cs">
+      <DependentUpon>Entities.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Resources\Entities.it.Designer.cs">
+      <DependentUpon>Entities.it.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Resources\Entities.ru.Designer.cs">
+      <DependentUpon>Entities.ru.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Resources\Enums.Designer.cs">
+      <DependentUpon>Enums.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Resources\Enums.it.Designer.cs">
+      <DependentUpon>Enums.it.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Resources\Enums.ru.Designer.cs">
+      <DependentUpon>Enums.ru.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Resources\EventType.Designer.cs">
       <DependentUpon>EventType.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -136,6 +187,45 @@
     <Compile Include="Repositories\User\IUserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Resources\ApplicationFileType.it.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ApplicationFileType.it.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\ApplicationFileType.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ApplicationFileType.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\ApplicationFileType.ru.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ApplicationFileType.ru.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Entities.it.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Entities.it.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Entities.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Entities.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Entities.ru.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Entities.ru.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Enums.it.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Enums.it.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Enums.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Enums.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Enums.ru.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Enums.ru.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\EventType.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>EventType.Designer.cs</LastGenOutput>
@@ -144,6 +234,12 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>EventType.ru.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Alicargo.Utilities\Alicargo.Utilities.csproj">
+      <Project>{28A88A2C-7BA4-4F4E-9131-AD69B070CD31}</Project>
+      <Name>Alicargo.Utilities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
