--- a/Alicargo.Jobs.BlackBox.Tests/app.config
+++ b/Alicargo.Jobs.BlackBox.Tests/app.config
@@ -3,13 +3,11 @@
 	<configSections>
 	</configSections>
 	<connectionStrings>
-		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.MainConnectionString"
-		  connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
-		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.FilesConnectionString"
-		  connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" />
+		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
+		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.FilesConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" />
 	</connectionStrings>
 	<appSettings>
-		<add key="JobPausePeriod" value="00:00:05"/>
+		<add key="JobPausePeriod" value="00:00:05" />
 	</appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -24,6 +22,10 @@
 			<dependentAssembly>
 				<assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.2.1312.1323" newVersion="4.2.1312.1323" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
