--- a/Alicargo.TestHelpers/Alicargo.TestHelpers.csproj
+++ b/Alicargo.TestHelpers/Alicargo.TestHelpers.csproj
@@ -85,6 +85,10 @@
     <Compile Include="TestConstants.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Alicargo.Core.Contracts\Alicargo.Core.Contracts.csproj">
+      <Project>{5D298560-5149-4DBB-9444-EE2EE9430483}</Project>
+      <Name>Alicargo.Core.Contracts</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Alicargo.Core\Alicargo.Core.csproj">
       <Project>{577b60f9-32f7-4117-97da-40743bff4ca0}</Project>
       <Name>Alicargo.Core</Name>
