--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -169,6 +169,7 @@
     <Compile Include="MvcHelpers\BundleHelpres\PathAttribute.cs" />
     <Compile Include="Services\Abstract\ICityService.cs" />
     <Compile Include="Services\Abstract\IClientApplicationManager.cs" />
+    <Compile Include="Services\Abstract\IClientCalculationPresenter.cs" />
     <Compile Include="Services\Abstract\IExcelGenerator.cs" />
     <Compile Include="Services\Application\ClientApplicationManager.cs" />
     <Compile Include="Services\Application\ApplicationManagerWithEvent.cs" />
@@ -420,6 +421,9 @@
     <Compile Include="ViewModels\Calculation\Admin\PaymentModel.cs" />
     <Compile Include="ViewModels\Calculation\CalculationHelper.cs" />
     <Compile Include="ViewModels\Calculation\Admin\CalculationListCollection.cs" />
+    <Compile Include="ViewModels\Calculation\Client\ClientCalculationGroup.cs" />
+    <Compile Include="ViewModels\Calculation\Client\ClientCalculationItem.cs" />
+    <Compile Include="ViewModels\Calculation\Client\ClientCalculationListCollection.cs" />
     <Compile Include="ViewModels\Calculation\Sender\SenderCalculationAwbInfo.cs" />
     <Compile Include="ViewModels\Calculation\Sender\SenderCalculationGroup.cs" />
     <Compile Include="ViewModels\Calculation\Sender\SenderCalculationItem.cs" />
