--- a/Alicargo.Core/Alicargo.Core.csproj
+++ b/Alicargo.Core/Alicargo.Core.csproj
@@ -64,6 +64,9 @@
     <Compile Include="..\Alicargo\Properties\ProjectInfo.cs">
       <Link>Properties\ProjectInfo.cs</Link>
     </Compile>
+    <Compile Include="Calculation\CalculationDataDrawable.cs" />
+    <Compile Include="Calculation\ClientBalanceHistoryItemDrawable.cs" />
+    <Compile Include="Calculation\DrawableMapper.cs" />
     <Compile Include="Calculation\ExcelClientCalculation.cs" />
     <Compile Include="Excel\ExcelConstants.cs" />
     <Compile Include="Helpers\ApplicationHelper.cs" />
