--- a/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
+++ b/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{E2F1A146-9076-4833-995E-084AC1B3EAC7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Alicargo.Contracts</RootNamespace>
-    <AssemblyName>Alicargo.Contracts</AssemblyName>
+    <RootNamespace>Alicargo.DataAccess.Contracts</RootNamespace>
+    <AssemblyName>Alicargo.DataAccess.Contracts</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
