--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -603,6 +603,7 @@
     <Content Include="Deploy\Scripts\update-4.sql" />
     <Content Include="Deploy\Scripts\update-5.sql" />
     <Content Include="Deploy\Scripts\update-6.sql" />
+    <Content Include="Deploy\Scripts\update-7.sql" />
     <Content Include="Scripts\app\AirWaybill\Columns.js" />
     <Content Include="Scripts\app\AirWaybill\Grid.js" />
     <Content Include="Scripts\app\Alicargo.js" />
