--- a/Alicargo.FilesMigration/App.config
+++ b/Alicargo.FilesMigration/App.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Alicargo.FilesMigration.Properties.Settings.MainConnectionString"
+            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
+        <add name="Alicargo.FilesMigration.Properties.Settings.FilesConnectionString"
+            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True"
+            providerName="" />
+    </connectionStrings>
 </configuration>
