--- a/Alicargo.Jobs.BlackBox.Tests/app.config
+++ b/Alicargo.Jobs.BlackBox.Tests/app.config
@@ -25,7 +25,11 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.2.1312.1323" newVersion="4.2.1312.1323" />
+				<bindingRedirect oldVersion="0.0.0.0-4.2.1312.1622" newVersion="4.2.1312.1622" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-3.16.4.0" newVersion="3.16.4.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
