--- a/Alicargo.FilesMigration/App.config
+++ b/Alicargo.FilesMigration/App.config
@@ -4,9 +4,9 @@
     </configSections>
     <connectionStrings>
         <add name="Alicargo.FilesMigration.Properties.Settings.MainConnectionString"
-            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
+            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_2_1;Integrated Security=True" />
         <add name="Alicargo.FilesMigration.Properties.Settings.FilesConnectionString"
-            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True"
+            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files_2_1;Integrated Security=True"
             providerName="" />
     </connectionStrings>
 </configuration>
