--- a/Alicargo.Core.Contracts/Alicargo.Core.Contracts.csproj
+++ b/Alicargo.Core.Contracts/Alicargo.Core.Contracts.csproj
@@ -57,14 +57,19 @@
     <Compile Include="Calculation\ICalculationService.cs" />
     <Compile Include="Calculation\IExcelClientCalculation.cs" />
     <Compile Include="Client\IClientBalance.cs" />
+    <Compile Include="Client\IClientPermissions.cs" />
+    <Compile Include="Common\IIdentityService.cs" />
+    <Compile Include="Common\ListCollection.cs" />
     <Compile Include="Event\IEventFacade.cs" />
     <Compile Include="Event\IPartitionConverter.cs" />
     <Compile Include="Excel\IDrawable.cs" />
     <Compile Include="AirWaybill\IAwbGtdHelper.cs" />
-    <Compile Include="ILog.cs" />
-    <Compile Include="IMailSender.cs" />
-    <Compile Include="IStateConfig.cs" />
+    <Compile Include="Excel\IExcelGenerator.cs" />
+    <Compile Include="Common\ILog.cs" />
+    <Compile Include="Email\IMailSender.cs" />
+    <Compile Include="State\IStateConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="State\IStateFilter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Alicargo.DataAccess.Contracts\Alicargo.DataAccess.Contracts.csproj">
