--- a/Alicargo.Core/Alicargo.Core.csproj
+++ b/Alicargo.Core/Alicargo.Core.csproj
@@ -107,6 +107,8 @@
     <Compile Include="Email\MailSender.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Email\SilentMailSender.cs" />
+    <Compile Include="State\StateConfig.cs" />
+    <Compile Include="State\StateFilter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Alicargo.Core.Contracts\Alicargo.Core.Contracts.csproj">
