--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -170,11 +170,11 @@
     <Compile Include="Services\Abstract\ICityService.cs" />
     <Compile Include="Services\Abstract\IClientApplicationManager.cs" />
     <Compile Include="Services\Abstract\IClientCalculationPresenter.cs" />
-    <Compile Include="Services\Abstract\IExcelGenerator.cs" />
     <Compile Include="Services\AirWaybill\AwbMapper.cs" />
     <Compile Include="Services\Application\ClientApplicationManager.cs" />
     <Compile Include="Services\Application\ApplicationManagerWithEvent.cs" />
     <Compile Include="Services\CityService.cs" />
+    <Compile Include="Services\Excel\ExcelGenerator.cs" />
     <Compile Include="Services\Excel\ExcelSenderCalculation.cs" />
     <Compile Include="Services\Excel\ExcelAdminCalculation.cs" />
     <Compile Include="Services\LanguageName.cs" />
@@ -271,9 +271,7 @@
     <Compile Include="Services\Abstract\IAdminCalculationPresenter.cs" />
     <Compile Include="Services\Abstract\ICarrierService.cs" />
     <Compile Include="Services\Abstract\IClientManager.cs" />
-    <Compile Include="Services\Abstract\IIdentityService.cs" />
     <Compile Include="Services\Abstract\IMessageBuilder.cs" />
-    <Compile Include="Services\Abstract\IStateFilter.cs" />
     <Compile Include="Services\Abstract\ITransitService.cs" />
     <Compile Include="Services\Abstract\IUserService.cs" />
     <Compile Include="Services\AirWaybill\AwbUpdateGtdManager.cs" />
@@ -285,14 +283,12 @@
     <Compile Include="Services\Calculation\AdminCalculationPresenter.cs" />
     <Compile Include="Services\Users\Client\ClientPermissions.cs" />
     <Compile Include="Services\Users\Client\ClientPresenter.cs" />
-    <Compile Include="Services\Abstract\IClientPermissions.cs" />
     <Compile Include="Services\Email\ApplicationAwbManagerWithMailing.cs" />
     <Compile Include="Services\Users\Client\ClientManagerWithMailing.cs" />
     <Compile Include="Services\Abstract\IClientPresenter.cs" />
     <Compile Include="Services\Email\AwbManagerWithMailing.cs" />
     <Compile Include="Services\Excel\Rows\AdminApplicationExcelRow.cs" />
     <Compile Include="Services\Excel\ApplicationExcelRowSource.cs" />
-    <Compile Include="Services\Excel\ExcelGenerator.cs" />
     <Compile Include="Services\Abstract\IApplicationExcelRowSource.cs" />
     <Compile Include="Services\Excel\Rows\ForwarderApplicationExcelRow.cs" />
     <Compile Include="Services\Excel\Rows\SenderApplicationExcelRow.cs" />
@@ -308,8 +304,6 @@
     <Compile Include="Services\IdentityService.cs" />
     <Compile Include="Services\AirWaybill\AwbPresenter.cs" />
     <Compile Include="Services\Log4NetWrapper.cs" />
-    <Compile Include="Services\State\StateConfig.cs" />
-    <Compile Include="Services\State\StateFilter.cs" />
     <Compile Include="Services\TransitService.cs" />
     <Compile Include="Services\Users\UserService.cs" />
     <Compile Include="T4MVC\AirWaybillController.generated.cs">
@@ -445,7 +439,6 @@
     <Compile Include="ViewModels\CarrierSelectModel.cs" />
     <Compile Include="ViewModels\AirWaybill\AwbAdminModel.cs" />
     <Compile Include="ViewModels\SelectModel.cs" />
-    <Compile Include="ViewModels\ListCollection.cs" />
     <Compile Include="ViewModels\User\SignIdModel.cs" />
     <Compile Include="ViewModels\User\UserListItem.cs" />
     <Compile Include="ViewModels\User\UserModel.cs" />
@@ -837,7 +830,9 @@
       <CustomToolNamespace>Resources</CustomToolNamespace>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Services\State\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
