--- a/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
+++ b/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
@@ -130,6 +130,7 @@
   <ItemGroup>
     <Compile Include="Controllers\AirWaybillControllerTests.cs" />
     <Compile Include="Controllers\Application\ApplicationControllerTests.cs" />
+    <Compile Include="Controllers\Application\ClientApplicatonControllerTests.cs" />
     <Compile Include="Controllers\Application\SenderApplicationControllerTests.cs" />
     <Compile Include="Controllers\ClientControllerTests.cs" />
     <Compile Include="Controllers\TransitControllerTests.cs" />
