--- a/Alicargo.Core.Contracts/Alicargo.Core.Contracts.csproj
+++ b/Alicargo.Core.Contracts/Alicargo.Core.Contracts.csproj
@@ -70,6 +70,7 @@
     <Compile Include="State\IStateConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State\IStateFilter.cs" />
+    <Compile Include="Users\IForwarderService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Alicargo.DataAccess.Contracts\Alicargo.DataAccess.Contracts.csproj">
