set sender by client through country

--- a/Alicargo.Tests/Alicargo.Tests.csproj
+++ b/Alicargo.Tests/Alicargo.Tests.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Services\Email\MailSenderTests.cs" />
     <Compile Include="Services\StateServiceTests.cs" />
     <Compile Include="Services\Client\ClientManagerTests.cs" />
+    <Compile Include="Services\Users\SenderServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
