--- a/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
+++ b/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
@@ -150,7 +150,7 @@
     <Compile Include="Repositories\IEventRepository.cs" />
     <Compile Include="Repositories\Application\IApplicationFileRepository.cs" />
     <Compile Include="Repositories\Application\IApplicationRepository.cs" />
-    <Compile Include="Repositories\Application\IApplicationUpdateRepository.cs" />
+    <Compile Include="Repositories\Application\IApplicationEditor.cs" />
     <Compile Include="Repositories\IAWBRepository.cs" />
     <Compile Include="Repositories\User\IBrokerRepository.cs" />
     <Compile Include="Repositories\ICalculationRepository.cs" />
