--- a/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
+++ b/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Contracts\Application\ApplicationData.cs" />
     <Compile Include="Contracts\EventData.cs" />
     <Compile Include="Contracts\ApplicationEventTemplateData.cs" />
-    <Compile Include="Contracts\Application\ApplicationListItemData.cs" />
+    <Compile Include="Contracts\Application\ApplicationExtendedData.cs" />
     <Compile Include="Contracts\EventDataForEntity.cs" />
     <Compile Include="Contracts\User\ClientBalanceHistoryItem.cs" />
     <Compile Include="Contracts\User\PasswordData.cs" />
