--- a/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
+++ b/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Controllers\Application\ApplicationControllerTests.cs" />
     <Compile Include="Controllers\Application\ClientApplicatonControllerTests.cs" />
     <Compile Include="Controllers\Application\SenderApplicationControllerTests.cs" />
+    <Compile Include="Controllers\Application\ApplicationListControllerTests.cs" />
     <Compile Include="Controllers\ClientControllerTests.cs" />
     <Compile Include="Controllers\TransitControllerTests.cs" />
     <Compile Include="Controllers\SenderControllerTests.cs" />
